# freshon-delivery-app

./: .dockerignore  .gitignore  Dockerfile.dev  Dockerfile.prod  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
docs/: FRONTEND_ONBOARDING.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/freshon/: AlertHub.tsx  BagScanFlow.tsx  BottomNav.tsx  DeliveryMap.tsx  EarningsHeader.tsx  FeeBreakdown.tsx  LoadMeter.tsx  Logo.tsx  MapMock.tsx  MissionCard.tsx  NavChooser.tsx  Onboarding.tsx  PhoneFrame.tsx  ProofDrawer.tsx  QrScanner.tsx  RadarWaiting.tsx  RouteList.tsx  RouteToggle.tsx  StatusToggle.tsx  TripOffer.tsx  TripView.tsx  Wordmark.tsx
src/components/ui/: sonner.tsx  toast.tsx
src/hooks/: useAuth.tsx  useDeliverySocket.ts
src/lib/: apiClient.ts  backendAuthService.ts  cashDropService.ts  deliveryAssignmentService.ts  deliveryPartnerService.ts  deliverySocket.ts  deliveryStatusService.ts  deliveryTripService.ts  deliveryWalletService.ts  mapApps.ts  mapsUtils.test.ts  mapsUtils.ts  notify.ts  osrmRoute.ts  polyline.test.ts  polyline.ts  sound.ts  types.ts
src/pages/: Auth.tsx  Earnings.tsx  Index.tsx  Onboarding.tsx  Profile.tsx  SoundDemo.tsx
