[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2.3.3"
# TEMPORARILY DISABLED — the crate lives in the monorepo at
# packages/tauri-plugin-freshon-ota and is absent from this subtree clone, so
# cargo can't resolve the path and the Android build fails outright. Restore
# this line (and the three other sites below) once the crate is available:
#   src-tauri/src/lib.rs                  .plugin(tauri_plugin_freshon_ota::init())
#   src-tauri/capabilities/default.json   "freshon-ota:default"
#   src-tauri/tauri.conf.json             window url "freshonota://localhost"
# tauri-plugin-freshon-ota = { path = "../../packages/tauri-plugin-freshon-ota" }
